@@ -1,3 +1,9 @@
+2009-03-01  Stef Walter  <stef@memberwebs.com>
+
+	* src/seahorse-keyserver-results.c: Match key identifiers where 
+	the server returned a short one, but we're searching for a longer
+	key identifier. See bug #568799
+	
 2009-02-28  Stef Walter  <stef@memberwebs.com>
 
 	* src/seahorse-keyserver-results.c: Make results of 
